# soulx

./: .env.miner.example  .env.validator.example  .gitignore  .multimodal_server.example  README.md  message_and_signature.txt  pyproject.toml  requirements.txt
contrib/: CONTRIBUTING.md
docs/: running_miner.md  running_validator.md
multimodal_server/: .multimodal_server.example  base_model.py  constants.py  inference.py  main.py  payload.py  requirements.txt  service_manager.py  start_server.py  text_processor.py  warmup.py
multimodal_server/clip_embeddings/: clip_manager.py
multimodal_server/utils/: api_gate.py  base64_utils.py  misc.py  safety_checker.py
multimodal_server/vllm/vllm/engine/: async_llm_engine.py
multimodal_server/vllm/vllm/entrypoints/openai/: api_server.py  run_batch.py
soulx/core/: __init__.py  allocation.py  auth.py  config.py  config_client.py  config_manager.py  constants.py  database.py  hardware_check.py  path_utils.py  scoring.py  task_config.py  task_manager.py  task_synapse.py  task_type.py  token_manager.py  utils.py  validator_config.py  validator_manager.py  validator_whitelist.py  work_and_speed_functions.py
soulx/core/models/: __init__.py  config_models.py  payload_models.py  utility_models.py
soulx/core/storage/: __init__.py  base_storage.py  json_storage.py  redis_storage.py  utils.py
soulx/core/utils/: __init__.py  generic_utils.py  query_utils.py
soulx/miner/: __init__.py  config.py  constants.py  dependencies.py  env_loader.py  miner_server.py  server.py  soulx_miner.py  storage.py  task_config.py
soulx/miner/endpoints/: __init__.py  generic.py  image.py  text.py
soulx/miner/logic/: __init__.py  chat.py  image.py
soulx/validator/: __init__.py  contender_allocator.py  contender_client.py  miner_task_api_client.py  models.py  node_client.py  redis_queue_manager.py  reward_client.py  scoring_results_manager.py  scoring_system.py  soulx_validator.py  storage.py  system_client.py  task_client.py  task_config_client.py  task_processor.py  token_client.py  validator_whitelist_client.py
soulx/validator/common/: __init__.py  utils.py
soulx/validator/query/: __init__.py  nonstream.py  query_config.py  streaming.py
tasks/: npc_tasks.json
