[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soulx"
version = "1.0.0"
description = "soulx Mining Rental Subnet"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "soul", email = "soulx@gmail.com"}
]
dependencies = [
    "bittensor~=9.7.0",
    "ratelimit==2.2.1",
    "cachetools==5.3.1",
    "tabulate~=0.9.0",
    "python-dotenv>=1.0.0",
    "backoff==2.2.1",
    "redis==5.2.1",
    "async-timeout>=4.0.0",
    "aioredis>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.51.3",
    "ijson>=3.2.3",
    "psutil>=5.9.0",
    "gunicorn>=21.2.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "requests>=2.28.0",
    "mysql-connector-python>=8.0.32"
]
[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "responses==0.25.7",
    "ruff==0.11.7"
]

[tool.flit.metadata]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/SentiVerse-AI/SoulX"
Repository = "https://github.com/SentiVerse-AI/SoulX.git"

[tool.setuptools]
packages = ["soulx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"